# mplimate

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: auto_test.yml
examples/: 01_mplimate_examples.ipynb
mplimate/: __init__.py  animation.py  imshow.py  timeseries.py
tests/: conftest.py  test_animation.py  test_imshow.py
